--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,11 +28,6 @@ nav:
       - reference/index.md
       - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts:
           - reference/darts/index.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>pipelines:
-              - reference/darts/pipelines/index.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>AOISentinel2Pipeline: reference/darts/pipelines/AOISentinel2Pipeline.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>PlanetPipeline: reference/darts/pipelines/PlanetPipeline.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>Sentinel2Pipeline: reference/darts/pipelines/Sentinel2Pipeline.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>legacy_training:
               - reference/darts/legacy_training/index.md
               - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>convert_lightning_checkpoint: reference/darts/legacy_training/convert_lightning_checkpoint.md
@@ -42,34 +37,11 @@ nav:
               - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>test_smp: reference/darts/legacy_training/test_smp.md
               - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>train_smp: reference/darts/legacy_training/train_smp.md
               - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>wandb_sweep_smp: reference/darts/legacy_training/wandb_sweep_smp.md
-      - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts_segmentation:
-          - reference/darts_segmentation/index.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>training:
-              - reference/darts_segmentation/training/index.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>create_training_patches: reference/darts_segmentation/training/create_training_patches.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinarySegmentationMetrics: reference/darts_segmentation/training/BinarySegmentationMetrics.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>DartsDataModule: reference/darts_segmentation/training/DartsDataModule.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>DartsDataset: reference/darts_segmentation/training/DartsDataset.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>DartsDatasetInMemory: reference/darts_segmentation/training/DartsDatasetInMemory.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>DartsDatasetZarr: reference/darts_segmentation/training/DartsDatasetZarr.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>SMPSegmenter: reference/darts_segmentation/training/SMPSegmenter.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>metrics:
-              - reference/darts_segmentation/metrics/index.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryBoundaryIoU: reference/darts_segmentation/metrics/BinaryBoundaryIoU.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceAccuracy: reference/darts_segmentation/metrics/BinaryInstanceAccuracy.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceAveragePrecision: reference/darts_segmentation/metrics/BinaryInstanceAveragePrecision.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceConfusionMatrix: reference/darts_segmentation/metrics/BinaryInstanceConfusionMatrix.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceF1Score: reference/darts_segmentation/metrics/BinaryInstanceF1Score.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceFBetaScore: reference/darts_segmentation/metrics/BinaryInstanceFBetaScore.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstancePrecision: reference/darts_segmentation/metrics/BinaryInstancePrecision.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstancePrecisionRecallCurve: reference/darts_segmentation/metrics/BinaryInstancePrecisionRecallCurve.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceRecall: reference/darts_segmentation/metrics/BinaryInstanceRecall.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceStatScores: reference/darts_segmentation/metrics/BinaryInstanceStatScores.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>create_patches: reference/darts_segmentation/create_patches.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>patch_coords: reference/darts_segmentation/patch_coords.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>predict_in_patches: reference/darts_segmentation/predict_in_patches.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>SMPSegmenter: reference/darts_segmentation/SMPSegmenter.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>SMPSegmenterConfig: reference/darts_segmentation/SMPSegmenterConfig.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>pipelines:
+              - reference/darts/pipelines/index.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>AOISentinel2Pipeline: reference/darts/pipelines/AOISentinel2Pipeline.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>PlanetPipeline: reference/darts/pipelines/PlanetPipeline.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>Sentinel2Pipeline: reference/darts/pipelines/Sentinel2Pipeline.md
       - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts_acquisition:
           - reference/darts_acquisition/index.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>download_admin_files: reference/darts_acquisition/download_admin_files.md
@@ -101,12 +73,55 @@ nav:
           - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>calculate_slope: reference/darts_preprocessing/calculate_slope.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>calculate_topographic_position_index: reference/darts_preprocessing/calculate_topographic_position_index.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>preprocess_legacy_fast: reference/darts_preprocessing/preprocess_legacy_fast.md
+      - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts_segmentation:
+          - reference/darts_segmentation/index.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>SMPSegmenter: reference/darts_segmentation/SMPSegmenter.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>SMPSegmenterConfig: reference/darts_segmentation/SMPSegmenterConfig.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>create_patches: reference/darts_segmentation/create_patches.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>metrics:
+              - reference/darts_segmentation/metrics/index.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryBoundaryIoU: reference/darts_segmentation/metrics/BinaryBoundaryIoU.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceAccuracy: reference/darts_segmentation/metrics/BinaryInstanceAccuracy.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceAveragePrecision: reference/darts_segmentation/metrics/BinaryInstanceAveragePrecision.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceConfusionMatrix: reference/darts_segmentation/metrics/BinaryInstanceConfusionMatrix.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceF1Score: reference/darts_segmentation/metrics/BinaryInstanceF1Score.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceFBetaScore: reference/darts_segmentation/metrics/BinaryInstanceFBetaScore.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstancePrecision: reference/darts_segmentation/metrics/BinaryInstancePrecision.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstancePrecisionRecallCurve: reference/darts_segmentation/metrics/BinaryInstancePrecisionRecallCurve.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceRecall: reference/darts_segmentation/metrics/BinaryInstanceRecall.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinaryInstanceStatScores: reference/darts_segmentation/metrics/BinaryInstanceStatScores.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>patch_coords: reference/darts_segmentation/patch_coords.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>predict_in_patches: reference/darts_segmentation/predict_in_patches.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>training:
+              - reference/darts_segmentation/training/index.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>check_score_is_unstable: reference/darts_segmentation/training/check_score_is_unstable.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>create_training_patches: reference/darts_segmentation/training/create_training_patches.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>cross_validation_smp: reference/darts_segmentation/training/cross_validation_smp.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>parse_hyperparameters: reference/darts_segmentation/training/parse_hyperparameters.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>sample_hyperparameters: reference/darts_segmentation/training/sample_hyperparameters.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>score_from_runs: reference/darts_segmentation/training/score_from_runs.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>score_from_single_run: reference/darts_segmentation/training/score_from_single_run.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>test_smp: reference/darts_segmentation/training/test_smp.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>train_smp: reference/darts_segmentation/training/train_smp.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>tune_smp: reference/darts_segmentation/training/tune_smp.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>BinarySegmentationMetrics: reference/darts_segmentation/training/BinarySegmentationMetrics.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>DartsDataModule: reference/darts_segmentation/training/DartsDataModule.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>DartsDataset: reference/darts_segmentation/training/DartsDataset.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>DartsDatasetInMemory: reference/darts_segmentation/training/DartsDatasetInMemory.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>DartsDatasetZarr: reference/darts_segmentation/training/DartsDatasetZarr.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>Hyperparameters: reference/darts_segmentation/training/Hyperparameters.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>SMPSegmenter: reference/darts_segmentation/training/SMPSegmenter.md
       - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts_utils:
           - reference/darts_utils/index.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>cuda:
               - reference/darts_utils/cuda/index.md
               - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>free_cupy: reference/darts_utils/cuda/free_cupy.md
               - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>free_torch: reference/darts_utils/cuda/free_torch.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>namegen:
+              - reference/darts_utils/namegen/index.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>generate_counted_name: reference/darts_utils/namegen/generate_counted_name.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>generate_id: reference/darts_utils/namegen/generate_id.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>generate_name: reference/darts_utils/namegen/generate_name.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>rich:
               - reference/darts_utils/rich/index.md
               - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>RichManagerSingleton: reference/darts_utils/rich/RichManagerSingleton.md
@@ -123,7 +138,7 @@ theme:
     view: material/eye
   palette:
     # Palette toggle for automatic mode
-    - media: '(prefers-color-scheme)'
+    - media: "(prefers-color-scheme)"
       primary: light blue # 00ABE8
       accent: teal
       toggle:
@@ -132,7 +147,7 @@ theme:
 
     # Palette toggle for light mode
     - scheme: default
-      media: '(prefers-color-scheme: light)'
+      media: "(prefers-color-scheme: light)"
       primary: light blue
       accent: teal
       toggle:
@@ -141,7 +156,7 @@ theme:
 
     # Palette toggle for dark mode
     - scheme: slate
-      media: '(prefers-color-scheme: dark)'
+      media: "(prefers-color-scheme: dark)"
       primary: light blue
       accent: teal
       toggle:
@@ -178,16 +193,17 @@ plugins:
             - https://pytorch.org/docs/stable/objects.inv
             - https://lightning.ai/docs/torchmetrics/stable/objects.inv
             # - https://lightning.ai/docs/pytorch/stable/object.inv
+            - https://scikit-learn.org/stable/objects.inv
           paths:
-            - 'darts-acquisition/src'
-            - 'darts-ensemble/src'
-            - 'darts-export/src'
-            - 'darts/src'
-            - 'darts-preprocessing/src'
-            - 'darts-postprocessing/src'
-            - 'darts-segmentation/src'
-            - 'darts-superresolution/src'
-            - 'darts-utils/src'
+            - "darts-acquisition/src"
+            - "darts-ensemble/src"
+            - "darts-export/src"
+            - "darts/src"
+            - "darts-preprocessing/src"
+            - "darts-postprocessing/src"
+            - "darts-segmentation/src"
+            - "darts-superresolution/src"
+            - "darts-utils/src"
           options:
             members: true
             inherited_members: true
