Rework sentinel 2 acquisition and pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dependencies = [
     "darts-superresolution",
     "darts-utils",
     "filelock>=3.18.0",
+    "cql2>=0.4.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11, < 3.13"
