--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Panarctic Database of Active Layer Detachment Slides and Retrogre
 dependencies = [
     # General & Utils
     "rich>=13.9.2",
-    "cyclopts>=3.1.0",
+    "cyclopts[mkdocs]>=4.0",
     "lovely-numpy>=0.2.13",
     "setuptools>=75.5.0",
     "stopuhr>=0.0.10",
@@ -35,7 +35,7 @@ dependencies = [
     "dask>=2024.11.0,<2025.3.0",
     "distributed>=2024.12.0",
     "geocube>=0.7.0",
-    "numpy>=1.26.3, <2",
+    "numpy>=2.3.4",
     "xarray>=2024.9.0",
     "ray[data, default]>=2.37.0",
     "spyndex>=0.7.1",
@@ -89,7 +89,7 @@ Issues = "https://github.com/awi-response/darts-nextgen/issues"
 [project.optional-dependencies]
 torchdeps = [
     "torch>=2.2.0",
-    "torchvision>=0.17.0",
+    "torchvision>=0.17.0, <0.23",
     "segmentation-models-pytorch>=0.4.0",
     "lovely-tensors>=0.1.17",
     "timm>=1.0.13",
@@ -231,6 +231,8 @@ torchvision = [
   { index = "pytorch-cu126", extra = "cuda126" },
   { index = "pytorch-cu128", extra = "cuda128" },
 ]
+cyclopts = { git = "https://github.com/BrianPugh/cyclopts", branch = "mkdocs-plugin"}
+
 darts-acquisition = { workspace = true }
 darts-ensemble = { workspace = true }
 darts-export = { workspace = true }
