Upgrade to Numpy v2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "dask>=2024.11.0,<2025.3.0",
     "distributed>=2024.12.0",
     "geocube>=0.7.0",
-    "numpy>=1.26.3, <2",
+    "numpy>=2.1",
     "xarray>=2024.9.0",
     "ray[data, default]>=2.37.0",
     "spyndex>=0.7.1",
