--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
     "geocube>=0.7.0",
     "numpy>=1.26.3, <2",
     "xarray>=2024.9.0",
-    "ray[data, default]>=2.37.0",
+    "ray[default]==2.51.1",
     "spyndex>=0.7.1",
     # Visualization
     "cartopy>=0.24.1",
@@ -61,7 +61,7 @@ dependencies = [
     "cql2>=0.4.0",
 ]
 readme = "README.md"
-requires-python = ">= 3.11, < 3.13"
+requires-python = "==3.11.11"
 authors = [
     { name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" },
     { name = "Konrad Heidler", email = "k.heidler@tum.de" },
