--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ dependencies = [
     "darts-utils",
     "filelock>=3.18.0",
     "cql2>=0.4.0",
+    "ultraplot>=1.65.1",
+    "pypalettes>=0.2.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.11, < 3.13"
